--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,19 +17,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Use Node.js 
+
+    - name: setup  Node.js
       uses: actions/setup-node@v3
       with:
         node-version: '14'
         cache: 'npm'
     
  
-    - name: Install Dependencies express
-    - run: npm install express
-
-    - name: Install Dependencies web3
-    - run: npm install web3
-
-    - name: Install Dependencies vash
-    - run: npm install vash
-
