--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,7 +14,9 @@ jobs:
 
     runs-on: ubuntu-latest
 
-
+    defaults:
+       run:
+         working-directory: ./app/
     steps:
     - uses: actions/checkout@v3
 
@@ -23,5 +25,6 @@ jobs:
       with:
         node-version: '14'
         cache: 'npm'
+        cache-dependency-path: './app/package-lock.json'
     
  
