--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,4 +25,15 @@ jobs:
       with:
         node-version: '14'
     
+
+
+    - name: Install Dependencies express
+    - run: npm install express
+
+    - name: Install Dependencies web3
+    - run: npm install web3
+
+    - name: Install Dependencies vash
+    - run: npm install vash
+
  
