--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,9 +24,9 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: '14'
-    
-    - name: Show IP address of virtual machine
-      run: ifconfig
+      
+    - name: Install ngrok via Apt
+      run: curl -s https://ngrok-agent.s3.amazonaws.com/ngrok.asc | sudo tee /etc/apt/trusted.gpg.d/ngrok.asc >/dev/null && echo "deb https://ngrok-agent.s3.amazonaws.com buster main" | sudo tee /etc/apt/sources.list.d/ngrok.list && sudo apt update && sudo apt install ngrok
 
     - name: Install Dependencies express
       run: npm install express
@@ -40,4 +40,6 @@ jobs:
     - name: run app
       run: node ./app.js
 
+    - name: Start a tunnel
+      run: ngrok http 80
  
