--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,8 +25,8 @@ jobs:
       with:
         node-version: '14'
       
-    - name: Install ngrok via Apt
-      run: curl -s https://ngrok-agent.s3.amazonaws.com/ngrok.asc | sudo tee /etc/apt/trusted.gpg.d/ngrok.asc >/dev/null && echo "deb https://ngrok-agent.s3.amazonaws.com buster main" | sudo tee /etc/apt/sources.list.d/ngrok.list && sudo apt update && sudo apt install ngrok
+#    - name: Install ngrok via Apt
+#     run: curl -s https://ngrok-agent.s3.amazonaws.com/ngrok.asc | sudo tee /etc/apt/trusted.gpg.d/ngrok.asc >/dev/null && echo "deb https://ngrok-agent.s3.amazonaws.com buster main" | sudo tee /etc/apt/sources.list.d/ngrok.list && sudo apt update && sudo apt install ngrok
 
     - name: Install Dependencies express
       run: npm install express
@@ -37,8 +37,8 @@ jobs:
     - name: Install Dependencies vash
       run: npm install vash
 
-    - name: Start a tunnel
-      run: ngrok http 3000
+#    - name: Start a tunnel
+#     run: ngrok http 3000
 
     - name: run app
       run: node ./app.js
